Significant work on node modeling, communications, pluggable middleware